# text-ansi

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  text-ansi.cabal  text-color.cabal
.github/workflows/: ci.yaml  haskell-ci.yml
Data/Text/: ANSI.hs  Color.hs
Data/Text/Builder/: ANSI.hs
src/String/: ANSI.hs
src/Text/: ANSI.hs
src/Text/Builder/: ANSI.hs
src/Text/Lazy/Builder/: ANSI.hs
