cabal-version: 2.2

name: text-ansi
version: 0.1.1
category: Data
synopsis: Text styling for ANSI terminals.
description:
  Text styling for ANSI terminals using SGR codes, as defined by the
  <https://www.ecma-international.org/publications/files/ECMA-ST/Ecma-048.pdf ECMA-48>
  standard.
  .
  Supports foreground\/background color, bold\/faint intensity, italic,
  single\/double underline, strikethrough, frame, encircle, and overline escape
  sequences. Some styles may not work on your terminal.
  .
  Also features terminal detection, so redirecting styled output to a file will
  automatically strip the ANSI escape sequences.
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/text-ansi
bug-reports: https://github.com/mitchellwrosen/text-ansi/issues
copyright: (c) 2018, Mitchell Rosen
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with: GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1

extra-source-files:
  .travis.yml
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/text-ansi.git

library
  build-depends:
      base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14
    , text ^>= 1.0 || ^>= 1.1 || ^>= 1.2
  default-language:
    Haskell2010
  exposed-modules:
    Data.Text.ANSI
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-unsafe
    -Werror
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
